test/types/range/nonIntTypes/realRange.good
realRange.chpl:1: error: Ranges defined using bounds of type 'real(64)' are not currently supported
