test/types/range/nonIntTypes/realRange.chpl
var r = 1.2..1.3;
writeln(r);
